err/cloudshell-sdn-core.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Inject-3.3.1.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell'...
Listing './lib/python3.5/site-packages/cloudshell/configuration'...
Listing './lib/python3.5/site-packages/cloudshell/core'...
Listing './lib/python3.5/site-packages/cloudshell/core/context'...
Listing './lib/python3.5/site-packages/cloudshell/core/logger'...
Compiling './lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py'...
***   File "./lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py", line 285
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/networking'...
Listing './lib/python3.5/site-packages/cloudshell/networking/autoload'...
Listing './lib/python3.5/site-packages/cloudshell/networking/autoload/model'...
Listing './lib/python3.5/site-packages/cloudshell/networking/core'...
Listing './lib/python3.5/site-packages/cloudshell/networking/interfaces'...
Listing './lib/python3.5/site-packages/cloudshell/networking/interfaces/connectivity'...
Compiling './lib/python3.5/site-packages/cloudshell/networking/interfaces/connectivity/set_vlan_action.py'...
***   File "./lib/python3.5/site-packages/cloudshell/networking/interfaces/connectivity/set_vlan_action.py", line 1
    from CloudShell-Core.action_request import ActionRequest
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/networking/operations'...
Listing './lib/python3.5/site-packages/cloudshell/networking/operations/interfaces'...
Listing './lib/python3.5/site-packages/cloudshell/shell'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/dependency_injection'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/interfaces'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/session'...
Listing './lib/python3.5/site-packages/cloudshell/tests'...
Listing './lib/python3.5/site-packages/cloudshell/tests/driver_bootstrap'...
Listing './lib/python3.5/site-packages/cloudshell_core-2.1.153.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_networking-2.1.142.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_shell_core-2.3.4.egg-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/ipcalc-1.1.3.egg-info'...
Compiling './lib/python3.5/site-packages/ipcalc.py'...
***   File "./lib/python3.5/site-packages/ipcalc.py", line 237
    if ip > 0xffffffffffffffffffffffffffffffffL:
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonpickle'...
Listing './lib/python3.5/site-packages/jsonpickle/ext'...
Listing './lib/python3.5/site-packages/jsonpickle-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/networkx'...
Listing './lib/python3.5/site-packages/networkx/algorithms'...
Listing './lib/python3.5/site-packages/networkx/algorithms/approximation'...
Listing './lib/python3.5/site-packages/networkx/algorithms/approximation/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/assortativity'...
Listing './lib/python3.5/site-packages/networkx/algorithms/assortativity/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/bipartite'...
Listing './lib/python3.5/site-packages/networkx/algorithms/bipartite/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/centrality'...
Listing './lib/python3.5/site-packages/networkx/algorithms/centrality/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/chordal'...
Listing './lib/python3.5/site-packages/networkx/algorithms/chordal/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/coloring'...
Listing './lib/python3.5/site-packages/networkx/algorithms/coloring/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/community'...
Listing './lib/python3.5/site-packages/networkx/algorithms/community/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/components'...
Listing './lib/python3.5/site-packages/networkx/algorithms/components/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/connectivity'...
Listing './lib/python3.5/site-packages/networkx/algorithms/connectivity/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/flow'...
Listing './lib/python3.5/site-packages/networkx/algorithms/flow/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/isomorphism'...
Listing './lib/python3.5/site-packages/networkx/algorithms/isomorphism/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/link_analysis'...
Listing './lib/python3.5/site-packages/networkx/algorithms/link_analysis/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/operators'...
Listing './lib/python3.5/site-packages/networkx/algorithms/operators/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/shortest_paths'...
Listing './lib/python3.5/site-packages/networkx/algorithms/shortest_paths/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/traversal'...
Listing './lib/python3.5/site-packages/networkx/algorithms/traversal/tests'...
Listing './lib/python3.5/site-packages/networkx/algorithms/tree'...
Listing './lib/python3.5/site-packages/networkx/algorithms/tree/tests'...
Listing './lib/python3.5/site-packages/networkx/classes'...
Listing './lib/python3.5/site-packages/networkx/classes/tests'...
Listing './lib/python3.5/site-packages/networkx/drawing'...
Listing './lib/python3.5/site-packages/networkx/drawing/tests'...
Listing './lib/python3.5/site-packages/networkx/external'...
Listing './lib/python3.5/site-packages/networkx/generators'...
Listing './lib/python3.5/site-packages/networkx/generators/tests'...
Listing './lib/python3.5/site-packages/networkx/linalg'...
Listing './lib/python3.5/site-packages/networkx/linalg/tests'...
Listing './lib/python3.5/site-packages/networkx/readwrite'...
Listing './lib/python3.5/site-packages/networkx/readwrite/json_graph'...
Listing './lib/python3.5/site-packages/networkx/readwrite/json_graph/tests'...
Listing './lib/python3.5/site-packages/networkx/readwrite/tests'...
Listing './lib/python3.5/site-packages/networkx/testing'...
Listing './lib/python3.5/site-packages/networkx/testing/tests'...
Listing './lib/python3.5/site-packages/networkx/tests'...
Listing './lib/python3.5/site-packages/networkx/utils'...
Listing './lib/python3.5/site-packages/networkx/utils/tests'...
Listing './lib/python3.5/site-packages/networkx-1.11.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/core'...
Listing './lib/python3.5/site-packages/tests/core/logger'...
Listing './lib/python3.5/site-packages/tests/core/logger/config'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/networkx-1.11'...
Listing './share/doc/networkx-1.11/examples'...
Listing './share/doc/networkx-1.11/examples/3d_drawing'...
Listing './share/doc/networkx-1.11/examples/advanced'...
Listing './share/doc/networkx-1.11/examples/algorithms'...
Listing './share/doc/networkx-1.11/examples/basic'...
Listing './share/doc/networkx-1.11/examples/drawing'...
Listing './share/doc/networkx-1.11/examples/graph'...
Listing './share/doc/networkx-1.11/examples/multigraph'...
Listing './share/doc/networkx-1.11/examples/pygraphviz'...
Listing './share/python-wheels'...
